2014-09-16  Dana Burkart <dburkart@apple.com>

        Merge r173635

    2014-09-15  Alexey Proskuryakov  <ap@apple.com>

            Crash when logging in to optionshouse.com
            https://bugs.webkit.org/show_bug.cgi?id=136834

            Reviewed by Anders Carlsson.

            No test, because I couldn't make one. I don't have a way to reproduce first-hand.

            * platform/network/cf/SocketStreamHandleCFNet.cpp:
            (WebCore::SocketStreamHandle::readStreamCallback):
            (WebCore::SocketStreamHandle::writeStreamCallback):

2014-09-12  Lucas Forschler  <lforschler@apple.com>

        Merge r173584

    2014-09-12  Jer Noble  <jer.noble@apple.com>

            [Fullscreen] Taking embedded youtube video full screen takes the whole page full screen
            https://bugs.webkit.org/show_bug.cgi?id=136792

            Reviewed by Beth Dakin.

            Recalculate style after beginning the enter fullscreen animation, but before sending the
            "webkitfullscreenchange" event to listeners.

            * dom/Document.cpp:
            (WebCore::Document::webkitWillEnterFullScreenForElement):

2014-09-12  Lucas Forschler  <lforschler@apple.com>

        Merge r173544

    2014-09-11  Beth Dakin  <bdakin@apple.com>

            WebKit scrollbars flash in non-dominant spaces when entering Mission Control
            https://bugs.webkit.org/show_bug.cgi?id=136761
            -and corresponding-
            rdar://problem/18195616

            Reviewed by Tim Horton.

            This patch makes our logic about when to call ScrollableArea::contentAreaDidHide/
            Show match the logic in AppKit. We only want these notifications when the window 
            has become both visible and active (or lost both, in the case of hide).

            Re-name setIsVisibleInternal() to setIsVisibleAndActiveInternal(), and call it 
            only when both visibility and active-state have changed.